welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:12: error: illegal start of simple expression
	}
        ^Program:13: error: 'while' expected but '}' found.
}
^